<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/NameApplication"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="97dp" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:layout_below="@id/NameApplication"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:textSize="20sp"
        android:layout_below="@id/userName"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:textSize="20sp"
        android:layout_below="@id/userLogin"
        android:layout_marginHorizontal="50dp"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:textSize="20sp"
        android:layout_below="@id/editTextTextPassword"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:hint="@string/phone" />


    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="20sp"
        android:background="@color/buttonColor"
        android:layout_marginTop="300dp"
        android:layout_marginHorizontal="130dp"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="405dp" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create"
        android:textSize="20sp"
        android:background="@color/buttonColor"
        android:layout_marginTop="400dp"
        android:layout_marginHorizontal="130dp"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="405dp" />



</RelativeLayout>