<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:scaleType = "centerCrop"
    tools:context=".Authorization">

    <TextView
        android:id="@+id/NameApplication"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/authorization"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="97dp" />



    <EditText
        android:id="@+id/userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:textSize="20sp"
        android:layout_marginVertical="35sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_below="@id/NameApplication"
        android:background="@drawable/filds"
        android:padding="15sp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:textSize="20sp"
        android:padding="15sp"
        android:layout_below="@id/userLogin"
        android:background="@drawable/filds"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/AuthorizationButton"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginLeft="45sp"
        android:layout_marginRight="45sp"
        android:layout_marginTop="350dp"
        android:layout_marginHorizontal="150dp" />



    <TextView
        android:id="@+id/Clock"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:ems="10"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/idea_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="97dp" />



</RelativeLayout>
