<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserIdeas">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AndroidAPP.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/Theme.AndroidAPP.PopupOverlay" />

        <TextView
            android:id="@+id/userName"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:text="@string/authorization"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="97dp" />

        <EditText
            android:id="@+id/DeleteFavoriteNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="100"
            android:textSize="20sp"
            android:padding="10sp"
            android:layout_below="@id/userLogin"
            android:background="@drawable/filds"
            android:layout_marginHorizontal="130dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"
            android:hint="@string/delete"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:autofillHints="username" />

        <Button
            android:id="@+id/UsersIdeaEnterButton"
            android:backgroundTint="@color/green"
            android:theme="@style/Button.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterLike"
            android:layout_marginLeft="45sp"
            android:layout_marginRight="45sp"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="150dp"/>
        <ListView
            android:id="@+id/AllIdeas_list"
            android:layout_width="match_parent"
            android:layout_below ="@+id/toolbar"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            android:layout_height="match_parent" />


    </com.google.android.material.appbar.AppBarLayout>





</RelativeLayout>